Fix bug with main image on mobile.

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -38,6 +38,7 @@ li{
 	display:inline;
 }
 #cover{
+	display: none;
 	width:100%;
 }
 a{
