--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -4,6 +4,6 @@
 .main-video{
 	display: none;
 }
-.main-image{
+#cover{
 	display: inline;
 }
